<resources>
    <string name="app_name">Lamont Sky</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="search_for_a_product">Search for a product</string>
    <string name="favorite">Favorite</string>
    <string name="share_us">Share Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="sign_out">Sign out</string>
    <string name="dji_mini_3_pro">Dji Mini 3 Pro</string>
    <string name="product_details">Product Details</string>
    <string name="airships">Airships</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="please_wait">Please wait...</string>
</resources>